# ichigo-chess-engine

./: .gitignore  README.md
chess_engine/: CMakeLists.txt
chess_engine/include/: eval.hpp  gamestate.hpp  move.hpp  movegen.hpp  movelist.hpp  parse.hpp  perft.hpp  position.hpp  render.hpp  rules.hpp  search.hpp  types.hpp
chess_engine/src/: eval.cpp  gamestate.cpp  main.cpp  movegen.cpp  parse.cpp  perft.cpp  position.cpp  render.cpp  rules.cpp  search.cpp
chess_engine/tests/: test_castling.cpp  test_check.cpp  test_enpassant.cpp  test_king.cpp  test_knight.cpp  test_mate_stalemate.cpp  test_movegen.cpp  test_pawn.cpp  test_perft.cpp  test_promotion.cpp  test_sliders.cpp
chess_engine/tests/support/: testutil.hpp
